# TurboVis

./: CMakeLists.txt  README.md  TurboVis.sln
glfw_opengl3/: example_glfw_opengl3.vcxproj  example_glfw_opengl3.vcxproj.filters  main.cpp  turbovis PRESET.ini  turbovis.ini
turbovisLib/: AxialCompressor.cpp  AxialCompressor.h  AxialTurbine.cpp  AxialTurbine.h  Stage.cpp  Stage.h  StageContext.h  TurboVis.cpp  TurboVis.h  Vec.h
turbovisLib/include/: AxialCompressor.h  AxialTurbine.h  Stage.h  StageContext.h  TurboVis.h  Vec.h
turbovisLib/src/: AxialCompressor.cpp  AxialTurbine.cpp  Stage.cpp  StageContext.cpp  TurboVis.cpp  Vec.cpp
win32_directx9/: example_win32_directx9.vcxproj  example_win32_directx9.vcxproj.filters  imgui.ini  main.cpp  turbovis.ini
